Fix layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,9 +12,6 @@ mat-toolbar > mat-icon {
 
 mat-sidenav-container {
 	height: 100vh;
-	mat-sidenav-content {
-		overflow: hidden;
-	}
 }
 
 mat-sidenav {
