--- a/src/app/categories/category-list/category-list-item/category-list-item.component.scss
+++ b/src/app/categories/category-list/category-list-item/category-list-item.component.scss
@@ -1,3 +1,10 @@
+.category-name {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	flex: 1;
+}
+
 .category-actions-container {
 	margin-left: auto;
 }
